--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ django-stdimage==2.0.8
 django-haystack==2.4.1
 elasticsearch==2.1.0
 MySQL-python==1.2.3
+dj-database-url==0.3.0
+dj-static==0.0.6
+gunicorn==19.1.1
+psycopg2==2.5.1
+static==0.4
+wsgiref==0.1.2
