--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ media/
 .installed.cfg
 *.egg
 *.db
-db.sqlite
+db.sqlite3
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
